[project]
name = "iseg-nhr"
version = "0.2.0"
description = "Python interface for an ISEG NHR high-voltage power supply"
authors = [{ name = "ograsdijk", email = "o.grasdijk@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
dependencies = [
    "pyserial>=3.5",
]

[project.urls]
Repository = "https://github.com/ograsdijk/iseg-nhr"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
